# cognos-proof-engine

./: .dockerignore  .env.example  .gitignore  DOCKER_GUIDE.md  Dockerfile  GITHUB_ATTRACTION_AUDIT.md  README.md  TESTING_SETUP.md  UNICORN_EXECUTION_PLAN.md  UNICORN_STRATEGY.md  WEEK1_ACTION_PLAN.md  docker-compose.yml  fly.toml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCUSSION_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
cognos-sdk/: PUBLISH.md  README.md  setup.py
cognos_cli/: main.py
docs/: AGENT_EXECUTION.md  DEVELOPER_ONBOARDING.md  ENGINE_PARITY.md  EXECUTION_30_DAYS.md  EXTERNALIZATION_SPRINT_14D.md  GITHUB_AUTOPILOT.md  HN_LAUNCH_COPY.md  LANDING_PAGE_AI_BUILD_INSTRUCTION.md  LIVE_LAUNCH_CHECKLIST.md  MARKETING_PLAN_INTERNAL_2026-02.md  MVP_PRODUCT_SPEC.md  N8N_SOCIAL_AUTOMATION.md  OUTREACH_AGENT_BUILDERS.md  PROOF_OF_CONCEPT_INTERNAL.md  PROOF_SNAPSHOT_2026-02-27.md  PUBLIC_DEPLOY_RUNBOOK.md  RESEARCH_EXECUTION_MODE.md  ROADMAP.md  TRUST_REPORT_SCHEMA.md  TWITTER_THREAD_LAUNCH.md  UNICORN_BLUEPRINT.md  VIBECODING_PLANNING_MODE.md  index.html
examples/: cli_quickstart.sh  http_curl_examples.md  python_openai_compatible.py
mcp/: CLAUDE_CODE_SETUP.md  README.md  __init__.py  server.py
src/: agent_orchestrator.py  cleanup_agent_posts.py  gh_autopilot.py  lovable_bridge.py  lovable_local_test.py  main.py  manual_post_generator.py  models.py  poc_e2e.py  policy.py  proof_engine_autopilot.py  reports.py  research_execution_plan.py  smoke_oc001.py  smoke_oc002.py  smoke_oc006.py  (+3 more)
(+46 files in other folders)
